# system_metrics

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  settings.py
app/models/: metrics_model.py
app/queues/: rabbitmq_queue.py  redis_queue.py
app/routes/: metrics_routes.py
app/services/: metrics_service.py
app/workers/: rabbitmq_worker.py  redis_worker.py
docker/: docker-compose.yml
tests/: test_api.py  test_worker.py
