[tool.poetry]
name = "system_metrics"
version = "0.1"
description = "a stateless REST API for system metrics"
authors = ["Marlen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pika = "^1.3.0"
alembic = "^1.12.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"